--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -11,7 +11,7 @@
  
  .element__like:hover {
     opacity: 0.5;
-    /* transition: 0.2s ease;  */
+    transition: 0.2s ease; 
 }
 
 .element__like:active {
