--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,9 @@
 .popup {
    color: white;
-   display: none;
+   display: flex;
+   visibility: hidden;
+   opacity: 0;
+   transition: .5s linear;
    position: fixed;
    justify-content: center;
    align-items: center;
@@ -9,4 +12,5 @@
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, .5);
+   z-index: 4;
 }
