--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/element/___delete-button/element__delete-button.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
@@ -29,9 +30,20 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__close/_close-full/popup__close-full.css);
+
 @import url(../blocks/popup/__opened/popup_opened.css);
 @import url(../blocks/popup/__title/popup__title.css);
+
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__image-full/popup__image-full.css);
+@import url(../blocks/popup/__content/-full/popup__content-full.css);
+@import url(../blocks/popup/__description/popup__description.css);
+
+@import url(../blocks/popup/__content/__content-edit/popup__content-edit.css);
+@import url(../blocks/popup/__content/-add/popup__content-add.css);
+
+
 @import url(../blocks/popup/__edit/popup__form-input.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__cross/popup__cross.css);
