--- a/blocks/element/___delete-button/element__delete-button.css
+++ b/blocks/element/___delete-button/element__delete-button.css
@@ -1,5 +1,5 @@
 .element__delete-button {
-    background-image: url(../../../images/trash.svg);
+    background-image: url(../../../images/button_trash.svg);
     background-color: transparent;
     position: absolute;
     background-repeat: no-repeat;
